--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <header>
-      <div>
-        <div>
+      <div class="hero">
+        <div class="hero-img-container">
           <picture>
             <source
               srcset="./starter-code/assets/desktop/image-hero@2x.jpg"
@@ -33,38 +33,74 @@
               media="(min-width: 768px)"
             />
             <img
-              class="mw-100"
               src="./starter-code/assets/mobile/image-hero@2x.jpg"
               alt=""
             />
           </picture>
         </div>
-        <div>
-          <img src="./starter-code/assets/logo-dark.svg" alt="" />
+        <div class="container hero-container">
+          <img
+            class="hero-logo"
+            src="./starter-code/assets/logo-dark.svg"
+            alt=""
+          />
           <div>
-            <p>
+            <p class="hero-content">
               The arts in the collection of the Modern Art Gallery all started
               from a spark of inspiration. Will these pieces inspire you? Visit
               us and find out.
             </p>
-            <div>
+            <div class="btn">
               <a href="#">our location</a>
-              <svg width="10" height="24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke="#FFF" fill="none" d="M9 24 1 12 9 0" />
+              <svg width="10" height="24" xmlns="http://www.w3.org/2000/svg"><path stroke="#FFF" fill="none" d="m1 0 8 12-8 12"/></svg>
               </svg>
             </div>
           </div>
         </div>
       </div>
     </header>
-    <main></main>
-    <footer></footer>
 
-    Our location Your day at the gallery Wander through our distinct collections
+    <main>
+      <div class="container main-container">
+        <div class="box box-1">
+          <img src="./starter-code/assets/mobile/image-grid-1@2x.jpg" alt="">
+        </div>
+        <div class="box box-2">
+          <h1>Your day at the gallery</h1>
+          <p>Wander through our distinct collections
     and find new insights about our artists. Dive into the details of their
-    creative process. Come &amp; be inspired We’re excited to welcome you to our
-    gallery and see how our collections influence you. Modern Art Gallery The
+    creative process.</p>
+        </div>
+        <div class="box box-3">
+          <img src="./starter-code/assets/mobile/image-grid-2@2x.jpg" alt="">
+        </div>
+        <div class="box box-4">
+          <img src="./starter-code/assets/mobile/image-grid-3@2x.jpg" alt="">
+        </div>
+        <div class="box box-5">
+          <h1>Come & be inspired</h1>
+          <p>We're excited to welcome you to our
+    gallery and see how our collections influence you.</p>
+        </div>
+      </div>
+    
+    </main>
+    <footer>
+      <div class="container footer-container">
+        <img class="footer-logo" 
+        src="./starter-code/assets/logo-light.svg" alt="">
+        <p> The
     Modern Art Gallery is free to all visitors and open seven days a week from
-    8am to 9pm. Find us at 99 King Street, Newport, USA.
+    8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
+    <div class="social-container">
+      <img src="./starter-code/assets/icon-facebook.svg" alt="">
+      <img src="./starter-code/assets/icon-instagram.svg" alt="">
+      <img src="./starter-code/assets/icon-twitter.svg" alt="">
+    </div>
+      </div>
+     
+    </footer>
+
+   
   </body>
 </html>
