--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
       <img src="./starter-code/assets/icon-twitter.svg" alt="">
     </div>
       </div>
+
+      <div class="attribution">
+        Coded by
+        <a
+          href="https://www.frontendmentor.io/profile/estebanp2022"
+          target="_blank"
+          >Esteban Pesantes</a
+        >
+      </div>
      
     </footer>
 
