--- a/index.html
+++ b/index.html
@@ -63,7 +63,20 @@
     <main>
       <div class="container main-container">
         <div class="box box-1">
-          <img src="./starter-code/assets/mobile/image-grid-1@2x.jpg" alt="">
+          <picture>
+            <source
+              srcset="./starter-code/assets/desktop/image-grid-1@2x.jpg"
+              media="(min-width: 1440px)"
+            />
+            <source
+              srcset="./starter-code/assets/tablet/image-grid-1@2x.jpg"
+              media="(min-width: 768px)"
+            />
+            <img
+              src="./starter-code/assets/mobile/image-grid-1@2x.jpg"
+              alt=""
+            />
+          </picture>
         </div>
         <div class="box box-2">
           <h1>Your day at the gallery</h1>
@@ -72,10 +85,37 @@
     creative process.</p>
         </div>
         <div class="box box-3">
-          <img src="./starter-code/assets/mobile/image-grid-2@2x.jpg" alt="">
+          <picture>
+            <source
+              srcset="./starter-code/assets/desktop/image-grid-2@2x.jpg"
+              media="(min-width: 1440px)"
+            />
+            <source
+              srcset="./starter-code/assets/tablet/image-grid-2@2x.jpg"
+              media="(min-width: 768px)"
+            />
+            <img
+              src="./starter-code/assets/mobile/image-grid-2@2x.jpg"
+              alt=""
+            />
+          </picture>
         </div>
         <div class="box box-4">
-          <img src="./starter-code/assets/mobile/image-grid-3@2x.jpg" alt="">
+          <picture>
+            <source
+              srcset="./starter-code/assets/desktop/image-grid-3@2x.jpg"
+              media="(min-width: 1440px)"
+            />
+            <source
+              srcset="./starter-code/assets/tablet/image-grid-3@2x.jpg"
+              media="(min-width: 768px)"
+            />
+            <img
+              src="./starter-code/assets/mobile/image-grid-3@2x.jpg"
+              alt=""
+            />
+          </picture>
+          
         </div>
         <div class="box box-5">
           <h1>Come & be inspired</h1>
