alt image descriptions

--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
               srcset="./starter-code/assets/tablet/image-hero@2x.jpg"
               media="(min-width: 768px)"
             />
-            <img src="./starter-code/assets/mobile/image-hero@2x.jpg" alt="" />
+            <img
+              src="./starter-code/assets/mobile/image-hero@2x.jpg"
+              alt="museum gallery"
+            />
           </picture>
         </div>
         <div class="container hero-container">
           <img
             class="hero-logo"
             src="./starter-code/assets/logo-dark.svg"
-            alt=""
+            alt="modern art gallery"
           />
           <div class="hero-content">
             <p>
@@ -73,7 +76,7 @@
             />
             <img
               src="./starter-code/assets/mobile/image-grid-1@2x.jpg"
-              alt=""
+              alt="art gallery"
             />
           </picture>
         </div>
@@ -96,7 +99,7 @@
             />
             <img
               src="./starter-code/assets/mobile/image-grid-2@2x.jpg"
-              alt=""
+              alt="art gallery"
             />
           </picture>
         </div>
@@ -112,7 +115,7 @@
             />
             <img
               src="./starter-code/assets/mobile/image-grid-3@2x.jpg"
-              alt=""
+              alt="art gallery"
             />
           </picture>
         </div>
@@ -131,7 +134,7 @@
         <img
           class="footer-logo"
           src="./starter-code/assets/logo-light.svg"
-          alt=""
+          alt="modern art gallery"
         />
         <p>
           The Modern Art Gallery is free to all visitors and open seven days a
